# end2end

./: .gitignore  CMakeLists.txt  README.md  run_jetson_local.sh  run_local.ps1
caller_client_cpp/: CMakeLists.txt  README.md
caller_client_cpp/docs/: integration-guide.md
caller_client_cpp/examples/: request_template.json
caller_client_cpp/include/caller_client/: client.hpp  file_utils.hpp  protocol.hpp
caller_client_cpp/src/: client.cpp  file_utils.cpp  main.cpp  protocol.cpp
caller_client_cpp/tests/: protocol_test.cpp
config/: 00001_1023.553_183701383.json  1772950451323_-25675000_result.json
docs/: code-reading-guide.md  jetson-deployment-guide.md  software-udp-client-examples.md  software-udp-interface-onepage.md  software-udp-interface.md
include/: config.h  service_protocol.hpp  udp_service.hpp  utils.h  yolov8.hpp
src/: main.cpp  service_protocol.cpp  udp_service.cpp
tests/: service_protocol_test.cpp  udp_client_demo.cpp
